[package]
edition = "2021"
name = "embassy-async-examples"
version = "0.1.0"

[[bin]]
name = "blinky"
path = "src/bin/blinky.rs"

[[bin]]
name = "button"
path = "src/bin/button.rs"

[dependencies]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "defmt", "unstable-pac", "stm32u585ai", "time-driver-any", "memory-x", "exti"]  }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }

micromath = "2.0.0"
